# agentic-ai-architecture-framework

./: README.md  pyproject.toml  requirements.txt
1_basic_chatbot/: basic_chatbot.ipynb
2_Human_assistance/: human_in_loop.ipynb
3_debugging/: agent.py  debugging.ipynb  langgraph.json
3_debugging/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
4_Agents/: multiAIAgent.ipynb
MCP/: client.py  mathserver.py  weather.py
